--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./src/app.ts",
   "scripts": {
-    "test": "jest",
+    "test": "NODE_ENV=test jest --detectOpenHandles --forceExit",
+    "test:watch": "jest --watch",
     "start": "ts-node-dev src/app.ts"
   },
   "repository": {
@@ -27,10 +28,13 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/jest": "^25.2.1",
     "@types/mongoose": "^5.7.14",
     "@types/node": "^13.13.4",
+    "@types/supertest": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "ts-jest": "^25.4.0"
   }
 }
