--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
   },
   "homepage": "https://github.com/StellaKim1230/myblog-backend#readme",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "jest": "^25.5.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.11",
     "supertest": "^4.0.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.1",
+    "@types/jsonwebtoken": "^8.3.9",
     "@types/mongoose": "^5.7.14",
     "@types/node": "^13.13.4",
     "@types/supertest": "^2.0.9",
