--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,4 +14,5 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 10.x
-      - run: npm install && DB_URL=${{ secrets.DB_URL }} npm run test
+      - run: npm install
+      - run: DB_URL=${{ secrets.DB_URL }} npm run test
