--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/app.ts",
   "scripts": {
-    "test": "NODE_ENV=test jest --detectOpenHandles --forceExit --testTimeout=10000",
+    "test": "NODE_ENV=test jest --detectOpenHandles --forceExit",
     "test:watch": "jest --watch",
     "start": "ts-node-dev src/app.ts"
   },
