--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/StellaKim1230/myblog-backend#readme",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jest": "^25.5.4",
     "jsonwebtoken": "^8.5.1",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.1",
     "@types/jsonwebtoken": "^8.3.9",
